Add Privacy Policy for FinTrack
This document outlines the Privacy Policy for FinTrack, detailing the information collected, its usage, and user rights.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FinTrack - Privacy Policy</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            color: #333;
+        }
+        h1 { color: #2D1B4E; border-bottom: 3px solid #2D1B4E; padding-bottom: 10px; }
+        h2 { color: #4A3366; margin-top: 30px; }
+        a { color: #2D1B4E; }
+        .last-updated { color: #666; font-style: italic; }
+    </style>
+</head>
+<body>
+    <h1>Privacy Policy for FinTrack</h1>
+    <p class="last-updated"><strong>Last Updated:</strong> December 2024</p>
+    <h2>1. Introduction</h2>
+    <p>FinTrack ("we," "our," or "us") is committed to protecting your privacy. This Privacy Policy explains how your personal information is collected, used, and disclosed by FinTrack.</p>
+    <h2>2. Information We Collect</h2>
+    <p>We collect information to provide better services to all our users.</p>
+    <ul>
+        <li><strong>Personal Information:</strong> When you sign up, we collect your email address and name (via Google Sign-In or email registration) to manage your account.</li>
+        <li><strong>Financial Data:</strong> We store the transaction data (expenses, income, budgets) you input into the app.</li>
+        <li><strong>Biometric Data:</strong> We do <strong>not</strong> collect or store your biometric data (FaceID/TouchID). Authentication is performed locally on your device by the operating system.</li>
+    </ul>
+    <h2>3. How We Use Your Information</h2>
+    <ul>
+        <li>To provide and maintain our Service.</li>
+        <li>To notify you about changes to our Service.</li>
+        <li>To allow you to participate in interactive features when you choose to do so.</li>
+        <li>To provide customer support.</li>
+    </ul>
+    <h2>4. Device Permissions</h2>
+    <ul>
+        <li><strong>Camera:</strong> "We need camera access to scan receipts." This allows you to extract text from physical receipts. Images are processed locally or temporarily for OCR and are not shared with third parties for other purposes.</li>
+        <li><strong>Photo Library:</strong> "We need photo library access to select receipt images."</li>
+        <li><strong>FaceID/TouchID:</strong> Used solely for local app locking to secure your financial data.</li>
+    </ul>
+    <h2>5. Data Storage & Security</h2>
+    <ul>
+        <li><strong>Local Storage:</strong> Your data is stored locally on your device using encrypted databases (Hive).</li>
+        <li><strong>Cloud Sync (Optional):</strong> If you enable cloud sync, your encrypted data is stored securely on Google Firebase servers.</li>
+    </ul>
+    <h2>6. Data Deletion</h2>
+    <p>You may delete your account and all associated data at any time via the "Settings" menu within the application.</p>
+    <h2>7. Contact Us</h2>
+    <p>If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:rmialmbs@gmail.com">rmialmbs@gmail.com</a></p>
+</body>
+</html>
